<resources>
    <string name="app_name">pack-my-trip</string>
    <string name="bienvenida_operador">Bienvenido de nuevo, Dwight S</string>
    <string name="texto_perfil">Perfil</string>
    <string name="texto_region">Región</string>
    <string name="texto_mis_servicios">Mis servicios</string>
    <string name="texto_registar_servicio">Registrar Servicio</string>
    <string name="texto_registro_de_servicios">Registro de servicios</string>
    <string name="texto_nombre_servicio">Nombre del servicio:</string>
    <string name="texto_precio_servicio">Precio del servicio:</string>
    <string name="texto_limite_dario">Limite de visita diario:</string>
    <string name="texto_caracteristicas_servicios">Caracteristicas de tu servicio</string>
    <string name="texto_subir_portada">Subir Portada</string>
    <string name="texto_programar_servicio">Programa tu servicio</string>
    <string name="texto_selecciona_fecha">Selecciona la fecha</string>
    <string name="texto_selecciona_Hora">Selecciona la hora</string>
    <string name="texto_edicion_de_servicios">Edición de servicios</string>
    <string name="texto_aceptar_cambios">Aceptar Cambios</string>
    <string name="texto_editar">Editar</string>
    <string name="texto_prueba_servicios_adapter">Experiencía Acuática Playa San Carlos. Fecha Programada: 25/04/2024
    </string>
    <string name="select_role_prompt">Como te quieres registrar</string>
    <string name="register_user">Registro de usuario</string>
    <string name="profile_name_hint">Nombre de usuario</string>
    <string name="email_hint">Correo electronico</string>
    <string name="password_hint">Contraseña</string>
    <string name="confirm_password_hint">Confirmar contraseña</string>
    <string name="day_hint">Dia</string>
    <string name="month_hint">Mes</string>
    <string name="year_hint">Año</string>
    <string name="register">Registrarse</string>
    <string name="upload_documents">Subir Documentos</string>
    <string name="no_file_selected">No hay archivo seleccionado</string>
    <string name="select_file">Seleccionar Archivo</string>
    <string name="upload_file">Subir Archivo</string>
    <string name="mostrar_unicamente">Mostrar únicamente:</string>
    <string name="agregar_servicio">Agregar Servicio</string>
    <string name="busca_tu_servicio">Busca un servicio para agregar</string>
    <string name="busca_tu_servicio_coma">Busca un servicio para agregar,</string>
    <string name="servicios_diponibles">Servicios disponibles en la región actual:</string>
    <string name="servicios_recordatorio">Los servicios que se ofrecen pueden variar de acuerdo con la región turistica
        en que te encuentres.
    </string>
    <string name="nombre_servicios">Descripción</string>
    <string name="organizado_por">Organizado por:</string>
    <string name="crear_paquete">Crear Paquete</string>
    <string name="nombre_paquete">Nombre del Paquete:</string>
    <string name="fecha_paquete">Fecha del Paquete: </string>
    <string name="selecccionar_fecha">Seleccionar Fecha</string>
    <string name="agregar_servicios">Agregar Servicios</string>
    <string name="servicios_mostrar">¿Qué servicios incluye el paquete?</string>
    <string name="seleccion_fecha_hora">Selecciona la fecha de tú paquete.</string>
    <string name="anuncio_paquetes">Servicios del Paquete </string>
    <string name="currency">$</string>
</resources>