<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.operator_activities.EditarServicio">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_tam"
        android:layout_marginBottom="10dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#28429e"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/texto_edicion_de_servicios"
        android:layout_marginBottom="16dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_nombre_servicio"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/nombreServicioEdtETxt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#d9d9d9"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_precio_servicio"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#d9d9d9"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_limite_dario"
            android:layout_marginStart="-8dp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#d9d9d9"/>
    </LinearLayout>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/operador_dashboard"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#28429e"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/texto_programar_servicio"
        android:layout_marginBottom="16dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">
        <Button
            android:id="@+id/seleccionarFechaEdtBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_selecciona_fecha"
            android:layout_gravity="center"
            android:backgroundTint="#28429e"
            android:fontFamily="@font/coda"
            android:layout_marginEnd="20dp"
        />
        <Button
            android:id="@+id/seleccionarHoraEdtBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_selecciona_Hora"
            android:layout_gravity="center"
            android:backgroundTint="#28429e"
            android:fontFamily="@font/coda"
        />
    </LinearLayout>
    <TextView
        android:id="@+id/fechaHoraEdtTxt"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-8dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#28429e"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/texto_caracteristicas_servicios"
        android:layout_marginBottom="10dp"
    />
    <EditText
        android:id="@+id/caracteristicasEdtETxt"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#d9d9d9"
        android:layout_marginBottom="16dp"
    />
    <Button
        android:id="@+id/aceptarCambiosBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_aceptar_cambios"
        android:layout_gravity="center"
        android:backgroundTint="#28429e"
        android:fontFamily="@font/coda"
    />
</LinearLayout>